# openGL

exam/: main.cpp  url.txt
lab1/: CMakeLists.txt  README.md  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt  main.cpp
lab6/: CMakeLists.txt  main.c  main.cpp
